[package]
name = "sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
clap = { version = "4.0.29", features = ["derive"] }
humantime-serde = "1.1.1"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls-webpki-roots"], default-features=false }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
warp = "0.3.3"
