[package]
name = "sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
humantime-serde = "1.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"], default-features=false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"
